--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -144,6 +144,9 @@
 .bloque-texto-f__comillas i
   color: #B4997F
 
+.bloque-texto-b.color-primario:before
+  background-color: #FFEDC8
+
 
 // titulo
 
@@ -270,6 +273,8 @@
   background-color: #fff
 .tabs-b__tab--active:hover
   background-color: #FFEDC8
+.tabs-c__header
+  margin-bottom: 0 !important
 
 // slyder f 
 .fa-chevron-right, .fa-chevron-left
